--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,9 +1,12 @@
+//VARIABLES//
 $color-primario: #231f20;
 $color-secundario: #F3DFA2;
 $color-terciario: #7EBDC2;
 $color-cuaternario: #EAEAEA;
 $height: calc(100vh - 103.5px);
+$heigt-mq: calc(100vh - 91px);
 
+//LISTA//
 $media-query:
 1630px,
 1580px,
