--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,45 +6,49 @@
 body {
   font-family: 'Alegreya', serif; }
 
+main .hero, main .progreso, main .perfil, main .productos-grid .producto-main, main .miperfil, main .nosotros, .formulario {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
+
 header nav {
   background: #231f20;
   background: linear-gradient(90deg, #231f20 0%, #F3DFA2 95%);
   background: -webkit-linear-gradient(90deg, #231f20 0%, #F3DFA2 95%);
   background: -moz-linear-gradient(90deg, #231f20 0%, #F3DFA2 95%);
   padding: 25px 10px 25px 10px;
-  position: sticky;
-  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center; }
   header nav div a .logo {
     width: 80px;
     height: 55px;
-    margin: 5px; }
+    margin: 5px;
+    transition: 2s ease; }
+    header nav div a .logo:hover {
+      transform: scale(1.2); }
   header nav div ul {
     display: flex;
     list-style: none; }
     header nav div ul li {
       margin: 15px 10px 15px 10px; }
-      header nav div ul li a {
+      header nav div ul li .nav-link {
         text-decoration: none;
         color: #231f20;
         font-family: 'Alegreya', serif;
         font-size: 25px;
         font-weight: 20px;
         border: 2px #231f20 solid;
-        padding: 10px; }
-        header nav div ul li a:hover {
+        padding: 10px;
+        transition: 1s; }
+        header nav div ul li .nav-link:hover {
           transform: scale(1.1) skew(15deg);
           -webkit-transform: scale(1.1) skew(15deg);
           -moz-transform: scale(1.1) skew(15deg); }
 
 main .hero {
   background-image: url(../img/fondoprod.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   color: #F3DFA2;
   font-family: 'Alegreya', serif;
   height: calc(100vh - 103.5px);
@@ -54,11 +58,20 @@ main .hero {
   align-items: center;
   flex-direction: column; }
   main .hero h1 {
-    border: 2px #7EBDC2 solid;
     padding: 10px;
     margin-top: 5px;
     font-size: 55px;
-    font-weight: 50px; }
+    font-weight: 50px;
+    border: 2px solid #7EBDC2;
+    animation: borderAnimation-hero 2s infinite ease-in-out; }
+
+@keyframes borderAnimation-hero {
+  0% {
+    border-width: 2px; }
+  50% {
+    border-width: 5px; }
+  100% {
+    border-width: 2px; } }
   main .hero .imagenuno {
     width: 80%;
     height: 45%;
@@ -78,12 +91,21 @@ main .productos {
   justify-content: center;
   align-items: center; }
   main .productos h2 {
-    border: 2px #7EBDC2 solid;
     padding: 10px;
     margin-top: 10px;
     color: #F3DFA2;
     font-size: 40px;
-    font-weight: bolder; }
+    font-weight: bolder;
+    border: 2px solid transparent;
+    animation: borderAnimation 2s infinite; }
+
+@keyframes borderAnimation {
+  0% {
+    border-color: transparent; }
+  50% {
+    border-color: #7EBDC2; }
+  100% {
+    border-color: transparent; } }
   main .productos p {
     color: #EAEAEA;
     text-align: center;
@@ -93,7 +115,8 @@ main .productos {
     margin-bottom: 15px; }
     main .productos p a {
       text-decoration: none;
-      color: #F3DFA2; }
+      color: #F3DFA2;
+      transition: color 1s ease; }
       main .productos p a:hover {
         color: #7EBDC2; }
 
@@ -122,15 +145,14 @@ main .prod-flex {
         font-size: 20px;
         font-weight: bold;
         margin-bottom: 15px; }
-      main .prod-flex .card .card-body .boton-prod:hover {
-        color: #F3DFA2; }
+      main .prod-flex .card .card-body .boton-prod {
+        transition: 1s ease; }
+        main .prod-flex .card .card-body .boton-prod:hover {
+          color: #F3DFA2;
+          transform: rotateY(360deg); }
 
 main .progreso {
   background-image: url(../img/fondoprod.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   font-family: 'Alegreya', serif;
   color: #EAEAEA;
   display: flex;
@@ -141,14 +163,20 @@ main .progreso {
     margin-top: 10px;
     color: #F3DFA2;
     font-size: 40px;
-    font-weight: bolder; }
+    font-weight: bolder;
+    border: 2px solid transparent;
+    animation: borderAnimation 2s infinite; }
+
+@keyframes borderAnimation {
+  0% {
+    border-color: transparent; }
+  50% {
+    border-color: #7EBDC2; }
+  100% {
+    border-color: transparent; } }
 
 main .perfil {
   background-image: url(../img/fondoprod.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   font-family: 'Alegreya', serif;
   text-align: center; }
   main .perfil img {
@@ -161,7 +189,8 @@ main .perfil {
   main .perfil a {
     text-decoration: none;
     color: #F3DFA2;
-    font-size: 30px; }
+    font-size: 30px;
+    transition: color 1s ease; }
     main .perfil a:hover {
       color: #7EBDC2; }
 
@@ -170,7 +199,10 @@ main .perfil {
   bottom: 30px;
   right: 40px; }
   .position img {
-    width: 45px; }
+    width: 45px;
+    transition: 2s; }
+    .position img:hover {
+      transform: scale(1.3); }
 
 main .productos .producto-titulo {
   border: 2px #7EBDC2 solid;
@@ -191,10 +223,6 @@ main .productos-grid {
     border: 2px #F3DFA2 solid;
     padding: 10px;
     background-image: url(../img/fondoprod.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
     box-shadow: 10px 10px 5px 0px rgba(126, 189, 194, 0.75);
     -webkit-box-shadow: 10px 10px 5px 0px rgba(126, 189, 194, 0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(126, 189, 194, 0.75); }
@@ -220,7 +248,8 @@ main .productos-grid {
       font-weight: bold;
       background-color: #F3DFA2;
       padding: 3px;
-      border-radius: 15px; }
+      border-radius: 15px;
+      transition: 1s ease-in-out; }
       main .productos-grid .producto-main a:hover {
         box-shadow: 15px -3px 17px 0px rgba(126, 189, 194, 0.75);
         -webkit-box-shadow: 15px -3px 17px 0px rgba(126, 189, 194, 0.75);
@@ -250,7 +279,8 @@ main .productos-grid {
       text-decoration: none;
       font-family: 'Alegreya', serif;
       font-size: 35px;
-      color: #F3DFA2; }
+      color: #F3DFA2;
+      transition: color 1s ease; }
       .informacion .envio a:hover {
         color: #7EBDC2; }
   .informacion .pago {
@@ -269,16 +299,13 @@ main .productos-grid {
       text-decoration: none;
       font-family: 'Alegreya', serif;
       font-size: 35px;
-      color: #F3DFA2; }
+      color: #F3DFA2;
+      transition: color 1s ease; }
       .informacion .pago a:hover {
         color: #7EBDC2; }
 
 main .miperfil {
   background-image: url(../img/fondoprod.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   font-family: 'Alegreya', serif;
   height: calc(100vh - 103.5px);
   padding: 20px;
@@ -287,11 +314,20 @@ main .miperfil {
   justify-content: center; }
   main .miperfil div h2 {
     display: inline-flex;
-    border: 2px #7EBDC2 solid;
     padding: 10px;
     color: #F3DFA2;
     font-size: 35px;
-    font-weight: bolder; }
+    font-weight: bolder;
+    border: 2px solid transparent;
+    animation: borderAnimation 2s infinite; }
+
+@keyframes borderAnimation {
+  0% {
+    border-color: transparent; }
+  50% {
+    border-color: #7EBDC2; }
+  100% {
+    border-color: transparent; } }
   main .miperfil div h3 {
     font-size: 32px;
     color: #F3DFA2; }
@@ -311,10 +347,6 @@ main .miperfil {
 
 main .nosotros {
   background-image: url(../img/fondoprod.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   font-family: 'Alegreya', serif;
   height: calc(100vh - 103.5px);
   padding: 20px;
@@ -323,22 +355,27 @@ main .nosotros {
   justify-content: center; }
   main .nosotros div h2 {
     display: inline-flex;
-    border: 2px #7EBDC2 solid;
     padding: 10px;
     margin-top: 10px;
     color: #F3DFA2;
     font-size: 40px;
-    font-weight: bolder; }
+    font-weight: bolder;
+    border: 2px solid transparent;
+    animation: borderAnimation 2s infinite; }
+
+@keyframes borderAnimation {
+  0% {
+    border-color: transparent; }
+  50% {
+    border-color: #7EBDC2; }
+  100% {
+    border-color: transparent; } }
   main .nosotros div p {
     font-size: 32px;
     color: #EAEAEA; }
 
 .formulario {
   background-image: url(../img/fondoprod.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
   color: #F3DFA2;
   font-family: 'Alegreya', serif;
   font-size: 18px;
@@ -364,12 +401,16 @@ footer {
       width: 80px; }
   footer div a img {
     margin: 5px 10px 0 10px;
-    width: 40px; }
+    width: 40px;
+    transition: 2s; }
+    footer div a img:hover {
+      transform: scale(1.3); }
   footer a {
     font-family: 'Alegreya', serif;
     font-size: 25px;
     text-decoration: none;
-    color: #F3DFA2; }
+    color: #F3DFA2;
+    transition: color 1s ease; }
     footer a:hover {
       color: #7EBDC2; }
 
