--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,14 +3,11 @@ footer{
     text-align: center;
     p{
         font-family: 'Alegreya', serif;
-        font-size: 30px;
-        font-weight: bolder;
+        @include font (30px, bolder);
         color: $color-cuaternario;
     }
     section{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex(flex, center, center);
         div{
             img{
                 margin: 5px 10px 0 10px;
@@ -23,6 +20,10 @@ footer{
                 img{
                     margin: 5px 10px 0 10px;
                     width: 40px;
+                    transition: 2s;
+                    &:hover{
+                        transform: scale(1.3);
+                    }
                 }
             }
         }
@@ -31,6 +32,7 @@ footer{
         font-size: 25px;
         text-decoration: none;
         color: $color-secundario;
+        transition: color 1s ease;
         &:hover{
             color: $color-terciario;
         }
