--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,19 +5,19 @@ header{
         background: -webkit-linear-gradient(90deg, $color-primario 0%, $color-secundario 95%);
         background: -moz-linear-gradient(90deg, $color-primario 0%, $color-secundario 95%);
         padding: 25px 10px 25px 10px;
-        position: sticky;
-        top: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        @include flex(flex, space-between, center);
         div{
             a{
                 .logo{
                     width: 80px;
                     height: 55px;
                     margin: 5px;
+                    transition: 2s ease;
+                    &:hover{
+                        transform: scale(1.2);
                     }
                 }
+            }
         }
         div{
             ul{
@@ -25,14 +25,14 @@ header{
                 list-style: none;
                 li{
                     margin: 15px 10px 15px 10px;
-                        a{
+                        .nav-link{
                             text-decoration: none;
                             color: $color-primario;
                             font-family: 'Alegreya', serif;
-                            font-size: 25px;
-                            font-weight: 20px;
+                            @include font(25px, 20px);
                             border: 2px $color-primario solid;
                             padding: 10px;
+                            transition: 1s;
                             &:hover{
                                 transform: scale(1.1) skew(15deg);
                                 -webkit-transform: scale(1.1) skew(15deg);
