--- a/scss/components/_inicio.scss
+++ b/scss/components/_inicio.scss
@@ -1,24 +1,30 @@
 main{
     .hero{
         background-image: url(../img/fondoprod.jpg);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+        @extend %background;
         color: $color-secundario;
         font-family: 'Alegreya', serif;
-        height: calc(100vh - 103.5px);
+        height: $height;
         text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex (flex, center, center);
         flex-direction: column;
         h1{
-            border: 2px $color-terciario solid;
             padding: 10px;
             margin-top: 5px;
-            font-size: 55px;
-            font-weight: 50px;
+            @include font (55px, 50px);
+            border: 2px solid $color-terciario;
+            animation: borderAnimation-hero 2s infinite ease-in-out;
+        }
+        @keyframes borderAnimation-hero {
+            0% {
+                border-width: 2px;
+            }
+            50% {
+                border-width: 5px;
+            }
+            100% {
+                border-width: 2px;
+            }
         }
         .imagenuno{
             width: 80%;
@@ -29,8 +35,7 @@ main{
             display: none;
         }
         p{
-            font-size: 35px;
-            font-weight: 35px;
+            @include font (35px, 35px);
             margin: 10px;
         }
     }
@@ -38,27 +43,36 @@ main{
         background-color: $color-primario;
         font-family: 'Alegreya', serif;
         text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex (flex, center, center);
         h2{
-            border: 2px $color-terciario solid;
             padding: 10px;
             margin-top: 10px;
             color: $color-secundario;
-            font-size: 40px;
-            font-weight: bolder;
+            @include font (40px, bolder);
+            border: 2px solid transparent;
+            animation: borderAnimation 2s infinite;
+        }
+        @keyframes borderAnimation {
+            0% {
+                border-color: transparent;
+            }
+            50% {
+                border-color: $color-terciario
+            }
+            100% {
+                border-color: transparent;
+            }
         }
         p{
             color: $color-cuaternario;
             text-align: center;
             font-family: 'Alegreya', serif;
-            font-size: 35px;
-            font-weight: 22px;
+            @include font (35px, 22px);
             margin-bottom: 15px;
             a{
                 text-decoration: none;
                 color: $color-secundario;
+                transition: color 1s ease;
                 &:hover{
                     color: $color-terciario;
                 }
@@ -69,9 +83,7 @@ main{
         background-color: $color-primario;
         font-family: 'Alegreya', serif;
         text-align: center;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
+        @include flex (flex, space-evenly, center);
         flex-wrap: wrap;
         .card{
             margin: 10px;
@@ -83,28 +95,27 @@ main{
                 .titulo-prod{
                     color: $color-primario;
                     font-family: 'Alegreya', serif;
-                    font-size: auto;
-                    font-weight: bold;
+                    @include font (auto, bold);
                 }
                 .parrafo-prod{
                     color: $color-primario;
                     font-family: 'Alegreya', serif;
-                    font-size: 20px;
-                    font-weight: bold;
+                    @include font (20px, bold);
                     margin-bottom: 15px;
                 }
-                .boton-prod:hover{
+                .boton-prod{
+                    transition: 1s ease;
+                    &:hover{
                     color: $color-secundario;
+                    transform: rotateY(360deg);
+                    }
                 }
             }
         }
     }
     .progreso{
         background-image: url(../img/fondoprod.jpg);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+        @extend %background;
         font-family: 'Alegreya', serif;
         color: $color-cuaternario;
         display: flex;
@@ -114,16 +125,25 @@ main{
             padding: 10px;
             margin-top: 10px;
             color: $color-secundario;
-            font-size: 40px;
-            font-weight: bolder;
+            @include font (40px, bolder);
+            border: 2px solid transparent;
+            animation: borderAnimation 2s infinite; 
+        }
+            @keyframes borderAnimation {
+            0% {
+                border-color: transparent;
+            }
+            50% {
+                border-color: $color-terciario
+            }
+            100% {
+                border-color: transparent;
+            }
         }
     }
     .perfil{
         background-image: url(../img/fondoprod.jpg);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+        @extend %background;
         font-family: 'Alegreya', serif;
         text-align: center;
         img{
@@ -139,6 +159,7 @@ main{
             text-decoration: none;
             color: $color-secundario;
             font-size: 30px;
+            transition: color 1s ease;
             &:hover{
                 color: $color-terciario;
             }
@@ -152,5 +173,9 @@ main{
     right: 40px;
     img{
         width: 45px;
+        transition: 2s;
+        &:hover{
+            transform: scale(1.3);
+        }
     }
 }
