--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -3,8 +3,8 @@ $color-primario: #231f20;
 $color-secundario: #F3DFA2;
 $color-terciario: #7EBDC2;
 $color-cuaternario: #EAEAEA;
-$height: calc(100vh - 103.5px);
-$heigt-mq: calc(100vh - 91px);
+$height: calc(100vh - 107.5px);
+$height-mq: calc(100vh - 91px);
 
 //LISTA//
 $media-query:
