--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -4,7 +4,7 @@
     color: $color-secundario;
     font-family: 'Alegreya', serif;
     font-size: 18px;
-    height: $height;
+    min-height: $height;
     padding: 20px;
     display: flex;
     justify-content: center;
