--- a/scss/components/_informacion.scss
+++ b/scss/components/_informacion.scss
@@ -1,7 +1,7 @@
 .informacion{
     background-color: $color-primario;
     @include flex (flex, center, center);
-    height: $height;
+    min-height: $height;
     .envio{
         text-align: center;
         width: 48%;
